@@ -324,18 +324,24 @@ class WCS_Meta_Box_Subscription_Data extends WC_Meta_Box_Order_Data {
 	/**
 	 * Save meta box data
 	 *
-	 * @param int     $post_id
-	 * @param WP_Post $post
+	 * @see woocommerce_process_shop_order_meta
+	 *
+	 * @param int      $order_id
+	 * @param WC_Order $order
 	 */
-	public static function save( $post_id, $post = null ) {
-		if ( 'shop_subscription' != $post->post_type || empty( $_POST['woocommerce_meta_nonce'] ) || ! wp_verify_nonce( wc_clean( wp_unslash( $_POST['woocommerce_meta_nonce'] ) ), 'woocommerce_save_data' ) ) { // phpcs:ignore WordPress.PHP.StrictComparisons.LooseComparison
+	public static function save( $order_id, $order = null ) {
+		if ( ! wcs_is_subscription( $order_id ) ) {
+			return;
+		}
+
+		if ( empty( $_POST['woocommerce_meta_nonce'] ) || ! wp_verify_nonce( wc_clean( wp_unslash( $_POST['woocommerce_meta_nonce'] ) ), 'woocommerce_save_data' ) ) {
 			return;
 		}
 
 		self::init_address_fields();
 
 		// Get subscription object.
-		$subscription = wcs_get_subscription( $post_id );
+		$subscription = wcs_get_subscription( $order_id );
 		$props        = array();
 
 		// Ensure there is an order key.
@@ -427,6 +433,6 @@ class WCS_Meta_Box_Subscription_Data extends WC_Meta_Box_Order_Data {
 			do_action( 'woocommerce_admin_created_subscription', $subscription );
 		}
 
-		do_action( 'woocommerce_process_shop_subscription_meta', $post_id, $post );
+		do_action( 'woocommerce_process_shop_subscription_meta', $order_id, $order );
 	}
 }
